<resources>
    <string name="app_name">FEIssenger</string>
    <string name="send">SEND</string>
    <string name="public_room">Public Room</string>
    <string name="msg_token_fmt">Token %s</string>
    <string name="not_matching_passwords">Passwords do not match!</string>
    <string name="existing_username_message">Username already exists.</string>
    <string name="wrong_username_or_password_message">Wrong username or password.</string>
    <string name="logout_dialog_text">Are you sure to logout?</string>
    <string name="confirm_logout">Log out</string>
    <string name="cancel_logout">Cancel</string>
    <string name="msg_subscribed">Subscribed to topic</string>
    <string name="msg_subscribe_failed">Subscription failed</string>
    <string name="username_hint">USERNAME</string>
    <string name="password_hint">PASSWORD</string>
    <string name="login_btn">Login</string>
    <string name="registration_btn">Registration</string>
    <string name="register_btn">REGISTER</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="active">active</string>
    <string name="change_theme">change theme</string>
    <string name="logout_icon">logout icon</string>
    <string name="send_message_button">send message</string>
    <string name="type_message_here">Type message here…</string>
    <string name="open_gifs_panel">open gifs panel</string>
    <string name="add_new_post">add new post</string>
    <string name="type_your_post_here">Type your post here</string>
    <string name="post">POST</string>
    <string name="this_is_gif_image">this is gif image</string>
</resources>
