<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/app"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="@dimen/thin"
        android:background="?attr/primaryDark">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/app_name"
                android:id="@+id/toolbar_text"
                android:textSize="@dimen/big_text" />

            <FrameLayout
                android:id="@+id/theme_icon_layout"
                android:layout_width="@dimen/huge_height"
                android:layout_height="@dimen/huge_height"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/logout_icon_layout"
                android:layout_margin="@dimen/thick"
                android:contentDescription="@string/change_theme"
                >


                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/theme_icon"
                    android:layout_width="@dimen/normal_height"
                    android:layout_height="@dimen/normal_height"
                    android:layout_gravity="center"
                    android:src="@drawable/sun" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="@dimen/huge_height"
                android:layout_height="@dimen/huge_height"
                android:id="@+id/logout_icon_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="@dimen/thick"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_gravity="center"
                    android:id="@+id/logout_icon"
                    android:layout_width="@dimen/normal_height"
                    android:layout_height="@dimen/normal_height"
                    android:contentDescription="@string/logout_icon"
                    android:src="@drawable/logout"
                    />

            </FrameLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>