<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.feissenger.ui.viewModels.MessagesViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/message_root">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messages_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/message_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/message_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/messages_list"
            android:background="@drawable/message_input">

            <FrameLayout
                android:id="@+id/giphy_button_layout"
                android:layout_width="@dimen/huge_height"
                android:layout_height="@dimen/huge_height"
                app:layout_constraintBottom_toBottomOf="@id/message_input"
                app:layout_constraintEnd_toEndOf="@id/guideline_start"
                app:layout_constraintStart_toStartOf="@id/message_input"
                app:layout_constraintTop_toTopOf="@id/message_input"

                >

            <com.giphy.sdk.ui.views.buttons.GPHGiphyButton
                android:id="@+id/giphy_button"
                android:layout_gravity="center"
                android:layout_width="@dimen/normal_height"
                android:layout_height="@dimen/normal_height"
                android:background="@android:color/transparent"
                android:contentDescription="@string/open_gifs_panel"
                />
            </FrameLayout>


            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="@dimen/huge_height"
                android:maxHeight="100dp"
                android:hint="@string/type_message_here"
                android:background="@android:color/transparent"
                android:text="@={model.input}"
                app:layout_constraintBottom_toBottomOf="@id/message_input"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toTopOf="@id/message_input" />

            <FrameLayout
                android:layout_width="@dimen/huge_height"
                android:layout_height="@dimen/huge_height"
                android:onClick="@{() -> model.sendMessage()}"
                app:layout_constraintBottom_toBottomOf="@id/message_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline_end"
                app:layout_constraintTop_toTopOf="@id/message_input">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/send_message_button"
                    android:enabled="@{model.enabledSend}"
                    tool:src="@drawable/ic_send_black"
                    android:src="@{model.enabledSend ? @drawable/ic_send_black : @drawable/ic_sync_disabled_black_24dp}"

                    />

            </FrameLayout>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/huge_height" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/huge_height" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>